--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -5,6 +5,7 @@ img {
     width: 400px;
 }
 
+
 #thirdDiv {
     border-radius: 1%;
     padding: 50px;
@@ -14,7 +15,12 @@ img {
     width: 600px;
     height: 500px;    
 }
+div {
+    text-align: center;
+}
 #spanId {
     font-size: 18px;
     margin: 50px;
+    margin: auto;
+    text-align: center;
 }
